Style bugs
Mobile-first scrollbar invisible - comp Export/help/table
Link on icon
Export minor style fix
Width text fixes
Resize input navbar

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -7,7 +7,9 @@
     mat-sidenav-content {
         padding-top: 20px;
         padding-left: 20px;
+        padding-right: 20px;
         height: calc(100% - 20px);
         overflow: hidden;
     }
 }
+
