--- a/src/app/export/export.component.scss
+++ b/src/app/export/export.component.scss
@@ -1,7 +1,14 @@
 @import '../../sass/variables';
 
 #export{
-    padding: 0 10px;
+    overflow: auto;
+    height: 100%;
+    &::-webkit-scrollbar {
+        display: none;
+    }
+    h1{
+        margin-top: 0;
+    }
     .section-download-doc{
         display: flex;
         flex-wrap: wrap;
@@ -13,13 +20,14 @@
         margin-bottom: 15px;
         border-left: 4px solid $third-grey;
         padding-left: 10px;
-        @media screen and (max-width: 992px)  {
+        @media screen and (max-width: 1200px)  {
             flex-direction: column;
         }
         .download-doc{
             &-type{
                 padding: 10px 0;
                 line-height: 1em;
+                width: 50px;
             }
             &-type, &-button{
                 flex: 1 1 auto;
@@ -30,6 +38,7 @@
             &-button{
                 color : $main-font-color;
                 font-size: 18px;
+                white-space: normal;
                 @media screen and (max-width: 992px) {
                     padding: 0;
                 }
